# Weather-Forecast

./: CMakeLists.txt  README.md  config.json
lib/: CMakeLists.txt  Cities.cpp  Cities.h  ConfigParse.cpp  ConfigParse.h  Weather.cpp  Weather.h
